tests/baselines/reference/isolatedModulesImportExportElision(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
file1.ts(1,17): error TS2307: Cannot find module 'module' or its corresponding type declarations.
file1.ts(2,18): error TS2307: Cannot find module 'module' or its corresponding type declarations.
file1.ts(3,21): error TS2307: Cannot find module 'module' or its corresponding type declarations.
file1.ts(11,18): error TS2307: Cannot find module 'module' or its corresponding type declarations.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== file1.ts (4 errors) ====
    import {c} from "module"
                    ~~~~~~~~
!!! error TS2307: Cannot find module 'module' or its corresponding type declarations.
    import {c2} from "module"
                     ~~~~~~~~
!!! error TS2307: Cannot find module 'module' or its corresponding type declarations.
    import * as ns from "module"
                        ~~~~~~~~
!!! error TS2307: Cannot find module 'module' or its corresponding type declarations.
    
    class C extends c2.C {
    }
    
    let x = new c();
    let y = ns.value;
    
    export {c1} from "module";
                     ~~~~~~~~
!!! error TS2307: Cannot find module 'module' or its corresponding type declarations.
    export var z = x;